# chatgpt-synopsis

./: .gitignore  LICENSE  README.md  generate_image.py  langchain_sequential.py  main.py  pyproject.toml  requirements.txt  voicevox.py
